# matilda-uci

./: .gitignore  CONTRIBUTING.md  README.md  currentTask.MD  developer.md  pyproject.toml
.github/workflows/: release.yml
assets/: README.md
checkpoints/: base_3k.pt  maia3_zero.pt  style_token_3k.pt
demos/: aggregate_results.py  fit_style_vector.py  import_to_lichess.py  play_on_lichess.py  play_vs_stockfish.py  style_demo.py
demos/data/: blitz_positions.json
demos/games/: README.md  lvl8_comparison.md  matilda1500_vs_lvl6_g1.pgn  matilda1500_vs_lvl6_g2.pgn  matilda2000_vs_lvl7_g1.pgn  matilda2000_vs_lvl7_g2.pgn  matilda2800_vs_lvl8_g1.pgn  matilda2800_vs_lvl8_g2.pgn
demos/games/matched/: README.md  matilda1500_vs_lvl6_g1.pgn  matilda1500_vs_lvl6_g2.pgn  matilda1500_vs_lvl7_g1.pgn  matilda1500_vs_lvl7_g2.pgn  matilda1500_vs_lvl8_g1.pgn  matilda1500_vs_lvl8_g2.pgn  matilda2000_vs_lvl6_g1.pgn  matilda2000_vs_lvl6_g2.pgn  matilda2000_vs_lvl7_g1.pgn  matilda2000_vs_lvl7_g2.pgn  matilda2000_vs_lvl8_g1.pgn  matilda2000_vs_lvl8_g2.pgn  matilda2300_vs_lvl6_g1.pgn  matilda2300_vs_lvl6_g2.pgn  matilda2800_vs_lvl6_g1.pgn  matilda2800_vs_lvl6_g2.pgn  matilda2800_vs_lvl7_g1.pgn  matilda2800_vs_lvl7_g2.pgn  matilda2800_vs_lvl8_g1.pgn  matilda2800_vs_lvl8_g2.pgn  matilda3200_vs_lvl6_g1.pgn  matilda3200_vs_lvl6_g2.pgn  matilda3200_vs_lvl7_g1.pgn  matilda3200_vs_lvl7_g2.pgn  matilda3200_vs_lvl8_g1.pgn  matilda3200_vs_lvl8_g2.pgn
demos/games/max3200/: README.md  matilda3200_vs_lvl6_g1.pgn  matilda3200_vs_lvl6_g2.pgn  (+4 more)
demos/style_vectors/: kasparov.pt  magnus_lichess.pt  tal.pt
docs/: gui-demo.md  profiling.md
scripts/: generate_checkpoint.py  profile_performance.py  verify_checkpoint.py
src/matilda_uci/: __init__.py  assets.py  cli.py  engine.py  maia_wrapper.py  matilda_policy.py  policy.py  timecontrol.py
tests/: test_assets.py  test_cli.py  test_engine.py  test_matilda_inference.py  test_matilda_model.py  test_matilda_policy.py  test_policy.py  test_timecontrol.py
(+7 files in other folders)
